# Intelligent-Conversation-Agent

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  docker-compose.yml  plan.md  tmp_docx_full.txt
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  memory.py  prompts.py  tools.py
backend/app/api/: routes.py  schemas.py
backend/app/mock/: order_api.py
backend/app/observability/: __init__.py  logging_config.py  metrics.py
backend/app/rag/: ingest.py  retriever.py  store.py
backend/app/storage/: __init__.py  conversation.py  orders.py
backend/scripts/: bootstrap_orders_db.py  ingest_pdf.py
backend/tests/: conftest.py  test_conversation_history.py  test_e2e.py  test_integration.py  test_mock_order.py  test_order_store.py  test_rag.py  test_rag_quality.py
dataset/mock/: orders.json
docs/: ARCHITECTURE.md  CLASSIFICATION_DESIGN.md  DATA_DESIGN.md  DEMO_SCRIPT.md  DEMO_SLIDES.md  DEPLOYMENT_FLOW.md  DESIGN_DECISIONS.md  EVALUATION_STRATEGY.md  LEVEL_300_OVERVIEW.md  OBSERVABILITY_DESIGN.md  PRESENTATION.md  RAG_IMPROVEMENTS.md  SETUP.md  SUBMISSION_SUMMARY.md  TROUBLESHOOTING.md  system-architecture-aws.drawio
frontend/: Dockerfile  app.py  requirements.txt
infrastructure/: debug-ecs-taskdef-backend-full.json  debug-ecs-taskdef-full.json  debug-ecs-taskdef.json  github-actions-permissions.json  github-actions-trust-policy.json  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
(+8 files in other folders)
